test/SIL/parse_swift_decls_in_sil_mode.sil
// RUN: %swift -parse %s -verify

typealias Int = ()

deinit // expected-error {{'deinitializer' functions may only be declared within a class}}

subscript (x : Int, y : Int) -> Int { get }// expected-error{{'subscript' functions may only be declared within a type}}

init(i:Int) // expected-error {{initializers may only be declared within a type}}

